feat: add missing payload entity configuration and metric
This feature add a new on-demand metric for nodes when a required entity
is missing from the config_table. This information is also stored with
the node in the in-memory database and can be seen (if triggered) in the
response for nodes and groups.
